Bug fix: body overflow x hidden

--- a/src/styles/elements/_elements.body.scss
+++ b/src/styles/elements/_elements.body.scss
@@ -6,4 +6,5 @@ body {
   font-weight: $font-weight-normal;
   min-height: 100vh;
   min-width: 100vw;
+  overflow-x: hidden;
 }
